<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222"
    tools:context="upv.welcomeincoming.app.Fragments.TranslateActivity"
    tools:ignore="MergeRootFrame" >
    <ScrollView android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:background="@drawable/button_custom_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSay"
                android:textColor="#FFF"
                android:id="@+id/idSay"
                android:onClick="openSpeech" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">
             <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/ShowTranslate"
                 android:layout_marginBottom="10dp"/>

                <Button
                    android:background="@drawable/button_custom_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnListen"
                    android:textColor="#FFF"
                    android:id="@+id/idListen"
                    android:onClick="gotoSpeak"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Common phrases"
                android:textColor="#F11"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/ShowTranslate"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:layout_marginTop="20dp" />

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                android:background="@drawable/abc_ab_stacked_transparent_dark_holo"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#888"
                    android:id="@+id/idTxt_1_en"
                    android:text="@string/txt_1_en"
                    android:layout_marginBottom="5dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFF"
                        android:id="@+id/idTxt_1"
                        android:text="@string/txt_1"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:background="@drawable/button_custom_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:text="@string/btnListen"
                    android:id="@+id/idListen_1"
                    android:onClick="gotoSpeak_txt_1"
                    android:layout_gravity="right"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/abc_ab_stacked_transparent_dark_holo"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#888"
                    android:id="@+id/idTxt_2_en"
                    android:text="@string/txt_2_en"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF"
                    android:id="@+id/idTxt_2"
                    android:text="@string/txt_2"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:background="@drawable/button_custom_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:text="@string/btnListen"
                    android:id="@+id/idListen_2"
                    android:onClick="gotoSpeak_txt_2"
                    android:layout_gravity="right"/>
            </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/abc_ab_stacked_transparent_dark_holo"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#888"
                        android:id="@+id/idTxt_3_en"
                        android:text="@string/txt_3_en"
                        android:layout_marginBottom="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFF"
                        android:id="@+id/idTxt_3"
                        android:text="@string/txt_3"
                        android:layout_marginBottom="10dp"/>
                <Button
                    android:background="@drawable/button_custom_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnListen"
                    android:textColor="#FFF"
                    android:id="@+id/idListen_3"
                    android:onClick="gotoSpeak_txt_3"
                    android:layout_gravity="right"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/abc_ab_stacked_transparent_dark_holo"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#888"
                    android:id="@+id/idTxt_4_en"
                    android:text="@string/txt_4_en"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF"
                    android:id="@+id/idTxt_4"
                    android:text="@string/txt_4"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:background="@drawable/button_custom_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:text="@string/btnListen"
                    android:id="@+id/idListen_4"
                    android:onClick="gotoSpeak_txt_4"
                    android:layout_gravity="right" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/abc_ab_stacked_transparent_dark_holo"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#888"
                    android:id="@+id/idTxt_5_en"
                    android:text="@string/txt_5_en"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF"
                    android:id="@+id/idTxt_5"
                    android:text="@string/txt_5"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:background="@drawable/button_custom_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnListen"
                    android:textColor="#FFF"
                    android:id="@+id/idListen_5"
                    android:onClick="gotoSpeak_txt_5"
                    android:layout_gravity="right" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/abc_ab_stacked_transparent_dark_holo"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#888"
                    android:id="@+id/idTxt_6_en"
                    android:text="@string/txt_6_en"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF"
                    android:id="@+id/idTxt_6"
                    android:text="@string/txt_6"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:background="@drawable/button_custom_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnListen"
                    android:textColor="#FFF"
                    android:id="@+id/idListen_6"
                    android:onClick="gotoSpeak_txt_6"
                    android:layout_gravity="right" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/abc_ab_stacked_transparent_dark_holo"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#888"
                    android:id="@+id/idTxt_7_en"
                    android:text="@string/txt_7_en"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF"
                    android:id="@+id/idTxt_7"
                    android:text="@string/txt_7"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:background="@drawable/button_custom_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:text="@string/btnListen"
                    android:id="@+id/idListen_7"
                    android:onClick="gotoSpeak_txt_7"
                    android:layout_gravity="right" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/abc_ab_stacked_transparent_dark_holo"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#888"
                    android:id="@+id/idTxt_8_en"
                    android:text="@string/txt_8_en"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFF"
                    android:id="@+id/idTxt_8"
                    android:text="@string/txt_8"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:background="@drawable/button_custom_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:text="@string/btnListen"
                    android:id="@+id/idListen_8"
                    android:onClick="gotoSpeak_txt_8"
                    android:layout_gravity="right" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
