<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="New Text"
                android:id="@+id/tv_descripcion_transport"
                android:layout_marginBottom="10dp"
                android:background="@drawable/card_background"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16dp"
                android:layout_marginTop="20dp" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#EEE"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#222">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contacto"
                        android:id="@+id/tv_nombre"
                        android:layout_weight="10"
                        android:layout_alignParentLeft="false"
                        android:layout_marginLeft="10dp"
                        android:layout_alignParentTop="false"
                        android:layout_marginTop="0dp"
                        android:layout_alignParentStart="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp" />

                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_item_subject">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telefonos"
                            android:id="@+id/textview"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_phone1"
                            android:layout_marginLeft="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_phone2"
                            android:layout_marginLeft="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_phone3"
                            android:layout_marginLeft="15dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sitioWeb"
                            android:id="@+id/textview1"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_website"
                            android:layout_marginLeft="5dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>